--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: url('../images/background-image.png') no-repeat;
+    background: url('background-image.png') no-repeat;
     display: flex;
     justify-content: center;
     background-size: 100vw 100vh;
